2017-03-25  Eric Herman <eric@freesa.org>

	implement ehbi_exp_mod(result, base, exp, mod)
	import files from libeba ( https://github.com/ericherman/libeba )
	fix tests/test-subtract.c
	include more addition test cases

	* src/ehbigint.h: add ehbi_exp_mod
	* src/ehbigint.c: iplement ehbi_exp_mod
	* src/eba.h: copy-paste from https://github.com/ericherman/libeba
	* src/eba.c: copy-paste from https://github.com/ericherman/libeba
	* src/ehbigint-eba.h: add some "shim" code to use libeba
	* src/ehbigint-eba.c: for the extern "int ebhi_eba_err"
	* tests/test-exp-mod.c: simple test case (need more here)
	* tests/test-subtract.c: set buf_len to actual length of buffer
	* tests/test-add.c: include tests which change sign
	* misc/pre-tidy.patch: new header files, fixup line numbers
	* Makefile.am: add new sources
	* .gitignore: test-exp-mod

2017-02-25  Eric Herman <eric@freesa.org>

	add ehbi_bytes_shift_right
	rename tests/test-shift-left.c -> tests/test-bytes-shift-left.c

	* src/ehbigint.h: add ehbi_bytes_shift_right, fix comments
	* src/ehbigint.c: ehbi_bytes_shift_right
	* tests/test-bytes-shift-right.c: new test
	* tests/test-bytes-shift-left.c: renamed from tests/test-shift-left.c
	* tests/test-shift-left.c: renamed to tests/test-bytes-shift-left.c
	* Makefile.am: add new function, adjust for rename
	* misc/pre-tidy.patch
	* .gitignore: separate tests from generic output files


2017-02-24  Eric Herman <eric@freesa.org>

	fix the "bi-calc" demo

	* demos/bi-calc.c: fix param passing
	* Makefile.am: "make demo" now works


2016-11-26  Eric Herman <eric@freesa.org>

	division now works with negative numbers

	* src/ehbigint.c: re-work ehbi_div to work with negatives
	* tests/test-div.c: add more tests

2016-11-25  Eric Herman <eric@freesa.org>

	* tests/test-mul.c: add more tests

2016-11-23  Eric Herman <eric@freesa.org>

	subtraction now works with negative numbers

	* src/ehbigint.c: re-work ehbi_subtract to work with negatives